--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -54,6 +54,6 @@ $media-tablet-up: "(min-width: 768px)";
     --focus-outline: var(--focus-outline-width) solid #{$font-color--light};
 
     // Animations
-    --duration: 150ms;
+    --duration: 250ms;
     --timing: ease;
 }
